--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,10 +1,18 @@
 <p style="color: green"><%= notice %></p>
-
 <%= render @place %>
-
 <div>
-  <%= link_to "Edit this place", edit_place_path(@place) %> |
+  <%= link_to "Edit this place", edit_place_path(@place) %>
   <%= link_to "Back to places", places_path %>
-
+  <p>
+    <div id="map">
+    </div>
+  </p>
   <%= button_to "Destroy this place", @place, method: :delete %>
 </div>
+<% provide :head_tags do %>
+  <script>
+    document.addEventListener("DOMContentLoaded", function(){
+        initMap(<%=@place.latitude%>, <%=@place.longitude%>)
+    });
+  </script>
+<% end %>
